# omicidx-builder

./: .dockerignore  .gitignore  Dockerfile  README.org  biosample_pipeline.sh  config_example.toml  gcp_docker.sh  pyproject.toml  sra_es_mapping.json  sra_pipeline.sh
omicidx-builder/: cli.py
omicidx_builder/: bigquery_utils.py  biosample_kubernetes_job.py  cli.py  click_root.py  config.py  elasticsearch_utils.py  gcs_utils.py  geo_cli.py  pubmed_cli.py  rdbms.py  sra_kubernetes_job.py  utils.py
omicidx_builder/data/: biosample_es_mapping.json  sra_es_mapping.json
omicidx_builder/data/bigquery_schemas/: biosample.schema.json
tests/: test_biosample_downloading.py  test_utils_fcns.py
workflows/: main.nf
