[tool.poetry]
name = "omicidx_builder"
version = "0.2.4"
description = "Tooling to build and deploy omicidx data and resources"
authors = [
"Sean Davis <seandavi@gmail.com>"
]
license = "MIT"

repository = "https://github.com/seandavi/omicidx-builder"
#documentation = "https://poetry.eustace.io/docs"

classifiers = [
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Topic :: Database",
"Topic :: Scientific/Engineering :: Bio-Informatics",
"Environment :: Console",
"Development Status :: 4 - Beta",
"Intended Audience :: Science/Research"
]


keywords = [
"bioinformatics",
"genomics",
"metadata",
"omicidx",
"sequencing",
"NCBI"
]

[tool.poetry.scripts]
omicidx_builder = 'omicidx_builder.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
Click = "*"
elasticsearch = "^7"
elasticsearch_dsl = "^7"
google-cloud-bigquery = "*"
google-cloud-storage = "*"
google-cloud-pubsub = "*"
omicidx  = { git = "https://github.com/seandavi/omicidx.git", branch = "master" }
toml = "^0.10"
ujson = "^1.35"
pydantic = "^1.1"


[tool.poetry.dev-dependencies]
jedi = "^0.15.1"
ipython = "^7.8"
pytest = "^5.2.1"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
