[tool.poetry]
name = "omicidx_builder"
version = "0.5.1"
description = "Tooling to build and deploy omicidx data and resources"
authors = [
"Sean Davis <seandavi@gmail.com>"
]
license = "MIT"

repository = "https://github.com/seandavi/omicidx-builder"
#documentation = "https://poetry.eustace.io/docs"

classifiers = [
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Topic :: Database",
"Topic :: Scientific/Engineering :: Bio-Informatics",
"Environment :: Console",
"Development Status :: 4 - Beta",
"Intended Audience :: Science/Research"
]


keywords = [
"bioinformatics",
"genomics",
"metadata",
"omicidx",
"sequencing",
"NCBI"
]

[tool.poetry.scripts]
omicidx_builder = 'omicidx_builder.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
Click = "*"
elasticsearch = "^7"
elasticsearch_dsl = "^7"
google-cloud-bigquery = "*"
google-cloud-storage = "*"
google-cloud-pubsub = "*"
toml = "^0.10"
ujson = "^1.35"
pydantic = "^1.1"
databases = "^0.2.6"
psycopg2 = "^2.8"
sqlalchemy = "^1.3"
kubernetes = "^10.0.1"
omicidx = "^1.5.1"
httpx = "^0.23.0"
pubmed-parser = "^0.3.1"
orjson = "^3.8.1"


[tool.poetry.dev-dependencies]
jedi = "^0.15.1"
ipython = "^7.8"
pytest = "^5.2.1"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
pydoc-markdown = "^2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry==1.0"]
build-backend = "poetry.masonry.api"
